# rs-gen

./: .gitignore  Cargo.toml  README.md
rs-gen-core/: Cargo.toml
rs-gen-core/src/: io.rs  lib.rs
rs-gen-core/src/model/: generator.rs  mod.rs  multigram_model.rs  ngram_model.rs  prediction_input.rs  state.rs
rs-gen-exemple/: Cargo.toml
rs-gen-exemple/src/: main.rs
rs-gen-server/: Cargo.toml
rs-gen-server/src/: main.rs
rs-gen-ui/: Cargo.toml
rs-gen-ui/src/: main.rs
simple-web-front/: index.html  script.js  style.css
